[package]
name = "facharbeit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "^4.4.18", features = ["derive"] }
chess = "3.2.0"
vampirc-uci =  {version = "0.11", features = ["chess"]}
